Greatly improved description of AST

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,10 @@
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="{{ '/static/lib/css/monokai.css'|asseturl }}">
 
+    <style>
+        small { vertical-align: middle !important; }
+    </style>
+
     <!-- Printing and PDF exports -->
     <script>
       var link = document.createElement( 'link' );
